--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Книга Фанфиков</string>
-	<string name="loading">Загрузка</string>
+    <string name="app_name">Ficbook</string>
+	<string name="loading">Loading</string>
 </resources>
